test(storage): add test framework and command

--- a/src/google-cloud-storage/package.json
+++ b/src/google-cloud-storage/package.json
@@ -1,7 +1,13 @@
 {
+  "scripts": {
+    "test": "jest tests --passWithNoTests"
+  },
   "dependencies": {
     "@google-cloud/storage": "^6.1.0",
     "debug": "^4.3.4",
     "ghost-storage-base": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^28.1.1"
   }
 }
