build(Dockerfile): use stage to build for different needs

--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,9 +1,27 @@
-FROM ghost:5-alpine
+FROM ghost:5-alpine as base
 
-COPY ./src/google-cloud-storage content/adapters/storage
+ENV GHOST_INSTALL /var/lib/ghost
+ENV GHOST_CLOUD_STORAGE_ADAPTER /var/lib/ghost/content/adapters/storage
+COPY --chown=node ./src/google-cloud-storage "$GHOST_CLOUD_STORAGE_ADAPTER"
 
-WORKDIR content/adapters/storage
+FROM base as test
+ENV NODE_ENV test
+WORKDIR "$GHOST_CLOUD_STORAGE_ADAPTER"
+RUN set -eux; \
+    su-exec node yarn install;
+CMD [ "yarn", "run", "test" ]
 
-RUN yarn install --production
+FROM base as production
+ENV NODE_ENV production
+WORKDIR "$GHOST_CLOUD_STORAGE_ADAPTER"
+RUN set -eux; \
+    su-exec node yarn install; \
+    chown -R node:node "$GHOST_CLOUD_STORAGE_ADAPTER"; \
+    chmod -R 1777 "$GHOST_CLOUD_STORAGE_ADAPTER"; \
+    cd "$GHOST_INSTALL"; \
+    su-exec node yarn cache clean; \
+    su-exec node npm cache clean --force; \
+    npm cache clean --force; \
+    rm -rv /tmp/v8*
 
-WORKDIR /var/lib/ghost/
+WORKDIR "$GHOST_INSTALL"
