test(googleCloudStorage): make sure required functions existed and show some error if argument with incurrect value

--- a/src/google-cloud-storage/package.json
+++ b/src/google-cloud-storage/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest tests --passWithNoTests"
+    "test": "jest tests --passWithNoTests ./test/"
   },
   "dependencies": {
     "@google-cloud/storage": "^6.1.0",
